moved `soup_range` to luminance